# BiosReader

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProjects.bat  GenerateProjects.sh  README  README.md
src/: CMakeLists.txt
src/private/: biosdecode.c  biosreaderformac.c  dmidecode.c  dmioem.c  dmiopt.c  dmioutput.c  glad.c  ownership.c  types.h  util.c  util.h  vpddecode.c  vpdopt.c  vpdopt.h
src/public/: biosreaderformac.h  config.h  dmidecode.h  dmioem.h  dmiopt.h  dmioutput.h  glad.h  gladtheloader.h  types.h  util.h  version.h
